# SyncPlay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SyncPlay.rc  SyncPlayDoc.txt  resource.h  vcpkg.json
.github/workflows/: release.yml
core/: base64.h  crash_dump.cpp  crash_dump.h  logging.h  net_proxy.cpp  net_proxy.h  playback_clock.h  playback_controller.h  sha1.h  string_utils.h  task_queue.h  update_check.cpp  update_check.h  utf.cpp  utf.h
docs/: 01-architecture-overview.md  02-media-render-pipeline.md  03-subsystem-map.md  04-sync-algorithm.md  05-signaling-protocol.md  06-findings-and-issues.md  README.md
media/: mpv_helpers.cpp  mpv_helpers.h  opensubtitles.cpp  opensubtitles.h
network/: relay_voice.cpp  relay_voice.h  signaling_client.cpp  signaling_client.h  signaling_server.cpp  signaling_server.h
packaging/: SyncPlay.iss  build_installer.ps1
platform/: file_dialog.cpp  file_dialog.h  platform.cpp  platform.h
render/: render_sw.cpp  render_sw.h
scripts/: register_file_associations.ps1
src/: main.cpp
sync/: sync_manager.cpp  sync_manager.h  sync_session.cpp  sync_session.h  sync_state.h
ui/: app_state.cpp  app_state.h  chat_text.h  panel_utils.cpp  panel_utils.h  panels.cpp  panels.h  ui_helpers.cpp  ui_helpers.h
